Bug 337224 - baloo file indexer crashes if .local/share/baloo is not writable
Summary: baloo file indexer crashes if .local/share/baloo is not writable
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: Baloo File Daemon (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-07-08 09:33 UTC by Martin Steigerwald
Modified: 2014-07-10 08:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Steigerwald 2014-07-08 09:33:29 UTC
Application: baloo_file (0.1)
KDE Platform Version: 4.13.1 (Compiled from sources)
Qt Version: 4.8.6
Operating System: Linux 3.16.0-rc3-tp520+ x86_64
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:

martin@merkaba:~/.local/share> mv baloo baloo2
martin@merkaba:~/.local/share> mkdir baloo
martin@merkaba:~/.local/share> chmod 000 baloo
martin@merkaba:~/.local/share> balooctl start


Actual results:

Attached crash.


Expected result:

Graceful error handling.



Most recent Git as of today (479885fc00e361c4edb8723556a8e9cd232c8d06) on top of KDE SC 4.13.2

The crash can be reproduced every time.

-- Backtrace:
Application: Baloo-Datei (baloo_file), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#6  0x00007f6b9ead4afa in std::vector<Xapian::Internal::RefCntPtr<Xapian::Database::Internal>, std::allocator<Xapian::Internal::RefCntPtr<Xapian::Database::Internal> > >::operator= (this=this@entry=0x2097fe0, __x=<error reading variable: Cannot access memory at address 0x10>) at /usr/include/c++/4.9/bits/vector.tcc:170
#7  0x00007f6b9ead3b6c in Xapian::Database::Database (this=0x2097fd8, other=...) at ../api/omdatabase.cc:82
#8  0x00007f6b9eadd328 in Xapian::Enquire::Internal::Internal (this=0x2097fd0, db_=..., errorhandler_=0x0) at ../api/omenquire.cc:621
#9  0x00007f6b9eadd4fe in Xapian::Enquire::Enquire (this=0x7fffde4da3c0, databases=..., errorhandler=0x0) at ../api/omenquire.cc:874
#10 0x0000000000418c99 in Baloo::FileIndexingQueue::fillQueue (this=0x21ada30) at /home/martin/KDE/Dev/baloo/src/file/fileindexingqueue.cpp:56
#11 0x000000000041719a in Baloo::IndexingQueue::resume (this=0x21ada30) at /home/martin/KDE/Dev/baloo/src/file/indexingqueue.cpp:56
#12 0x0000000000416c41 in Baloo::IndexScheduler::IndexScheduler (this=0x21ad270, db=<optimized out>, config=0x7fffde4da660, parent=<optimized out>) at /home/martin/KDE/Dev/baloo/src/file/indexscheduler.cpp:82
#13 0x0000000000410338 in Baloo::FileIndexer::FileIndexer (this=0x7fffde4da5b0, db=0x7fffde4da5e0, config=0x7fffde4da660, parent=<optimized out>) at /home/martin/KDE/Dev/baloo/src/file/fileindexer.cpp:41
#14 0x00000000004090e8 in main (argc=<optimized out>, argv=<optimized out>) at /home/martin/KDE/Dev/baloo/src/file/main.cpp:86

The reporter indicates this bug may be a duplicate of or related to bug 333772.

Possible duplicates by query: bug 334831, bug 334229.

Reported using DrKonqi
Comment 1 Martin Steigerwald 2014-07-08 09:40:43 UTC
/usr/local/bin/akonadi_baloo_indexer doesn´t crash immediately in that case.
Comment 2 Vishesh Handa 2014-07-10 08:35:31 UTC
Git commit c6e3096ba05a709de2da7c9fc923e93ade62db8e by Vishesh Handa.
Committed on 09/07/2014 at 14:01.
Pushed by vhanda into branch 'frameworks'.

baloo_file: Check if we have write permissions

If we don't just abort. There is nothing we can do.
FIXED-IN: 5.0

M  +7    -0    src/file/main.cpp

http://commits.kde.org/baloo/c6e3096ba05a709de2da7c9fc923e93ade62db8e