baloo_file: Check if we have write permissions

If we don't just abort. There is nothing we can do.

BUG: 337224
FIXED-IN: 5.0